work in progress

--- a/StreamingBotHttpProxy/appsettings.json
+++ b/StreamingBotHttpProxy/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "MicrosoftAppId": null,
+  "MicrosoftAppPassword": null,
+  "BotAppId": null,
+  "BotEndpoint": null,
+  "ServiceEndpoint": null,
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
